<resources>
    <string name="app_name">Doc Repos</string>
    <string name="hy">hi</string>
    <string name="enter_symptoms">Enter Symptoms</string>
    <string name="add_symptoms">ADD SYMPTOMS</string>
    <string name="enter_disease">Enter Medicine</string>
    <string name="add_diseases">ADD DISEASES</string>
    <string name="enter_medicine">Enter Disease</string>
    <string name="add_medicines">ADD MEDICINES</string>
    <string name="save">save</string>
    <string name="patient_s_details">Patient\'s Details</string>
    <string name="patient_id">Patient ID:</string>
    <string name="id">ID</string>
    <string name="name">Name:</string>
    <string name="name1">Name</string>
    <string name="age">Age:</string>
    <string name="age1">Age</string>
    <string name="gender">Gender:</string>
    <string name="chronic_disease_if_any">Chronic Disease(if any):</string>
    <string name="diseases">Diseases</string>
    <string name="weight">Weight:</string>
    <string name="weight1">Weight</string>
    <string name="save_and_verify">save and Verify</string>
    <string name="apply_for_appointment">APPLY FOR APPOintment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_name">TEST NAME</string>
    <string name="verify">VERIFY</string>
    <string name="time">TIME :</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="pat_id">PATIENT ID</string>
    <string name="new_patient">NEW PATIENT ?</string>
    <string name="already_registered">ALREADY REGISTERED ?</string>
    <string name="upload_report">UPLOAD REPORT ?</string>
    <string name="view_appointments">VIEW APPOINTMENTS</string>
    <string name="doctor_s_registration">DOCTOR\'S REGISTRATION</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="view_prescrption">View Prescription</string>
    <string name="receptionist_registration">Receptionist Registration</string>
    <string name="click_and_upload">CLICK AND UPLOAD</string>
    <string name="test_lab_registration">TEST-LAB REGISTRATION</string>
    <string name="add_more">ADD MORE ?</string>
    <string name="prescription">PRESCRIPTION</string>
    <string name="medicine">Medicine</string>
    <string name="dosage">Dosage</string>
    <string name="print">print</string>
    <string name="tests">TESTS</string>
    <string name="view_reports">View Reports</string>
    <string name="register">Register</string>
    <string name="clinic_name">CLINIC NAME</string>
    <string name="enter_here">Enter Here</string>
    <string name="pd">Predicted Diseases</string>
    <string name="prescribed_medicines">Prescribed Medicines</string>
    <string name="medicines_with_dosage">Medicines with Dosage</string>
    <string name="patient_s_report">Patient\'s Report</string>
</resources>
