<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud1"
    android:scrollbars="vertical"
    tools:context=".details">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/patient_s_details"
    android:textSize="20dp"
    android:layout_marginTop="30dp"
    android:layout_gravity="center"
    android:fontFamily="@font/aldrich"
    android:textColor="#043257"

    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"

        >
    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/patient_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p_id"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textColorHint="#636363"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColorHint="#636363"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/p_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/name1"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"

        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/p_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/age1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/p_gender"
        android:layout_gravity="center"
        android:layout_width="122dp"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/chronic_disease_if_any"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/p_chrodisease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:autoText="true"
        android:hint="@string/diseases"

        android:imeOptions="actionNone"
        android:inputType="text|textMultiLine|textAutoCorrect"
        android:layout_gravity="center"

        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:inputType="number"
        android:maxLength="3"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/p_wieght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/weight1"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.611" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_transparent"
            android:fontFamily="@font/aldrich"
            android:text="Upload Report"
            android:textColor="@color/text_head"
            android:layout_gravity="center"
            android:onClick="upload_report"/>

    <Button
        android:id="@+id/p_save"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:onClick="psave"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_buttion"
        android:text="@string/save_and_verify" />

        <Button
        android:id="@+id/p_appointment"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
            android:onClick="appointment"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_buttion"
        android:text="@string/apply_for_appointment" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="Time: "
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:visibility="invisible" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>