<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud1"
    tools:context=".pateint_id_input">

    <EditText
        android:id="@+id/editText"
        android:layout_width="229dp"
        android:layout_height="66dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/patient_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/border_buttion"
        android:onClick="enter"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/aldrich"
        android:textSize="20dp"
        android:textColor="@color/text_head"
        android:text="@string/view_prescrption"
        android:onClick="view_pres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fui_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:srcCompat="@drawable/paperclip" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:srcCompat="@drawable/paperclip2" />
</android.support.constraint.ConstraintLayout>